--- a/echarts/html/index.html
+++ b/echarts/html/index.html
@@ -18,8 +18,7 @@
     <div id="dataset-chart01" style="width: 400px;height: 300px;"></div>
     <div id="dataset-chart02" style="width: 400px;height: 300px;"></div>
     <div id="dataset-chart03" style="width: 400px;height: 300px;"></div>
-    <div id="dataset-chart04" style="width: 400px;height: 300px;"></div>
-    <div id="dataset-chart05" style="width: 400px;height: 300px;"></div>
+    <div id="dataset-chart04" style="width: 100%;height: 400px;"></div>
 
 
 </body>
@@ -31,8 +30,7 @@
     var datasetchart01 = echarts.init(document.getElementById("dataset-chart01"), 'westeros');
     var datasetchart02 = echarts.init(document.getElementById("dataset-chart02"), 'westeros');
     var datasetchart03 = echarts.init(document.getElementById("dataset-chart03"), 'westeros');
-    var datasetchart04 = echarts.init(document.getElementById("dataset-chart04"), 'westeros');
-    var datasetchart05 = echarts.init(document.getElementById("dataset-chart05"), 'westeros');
+    var datasettransform01 = echarts.init(document.getElementById("dataset-chart04"), 'westeros');
 
     // 柱形图数据
     var option1 = {
@@ -248,6 +246,72 @@
         ],
     };
 
+    // dataset.transform
+    var datasettransformoptipon1 = {
+        title: {
+            text: 'dataset.transform'
+        },
+        tooltip:{},
+        dataset: [
+            {
+                source: [
+                    ['Product', 'Sales', 'Price', 'Year'],
+                    ['Cake', 123, 32, 2011],
+                    ['Cereal', 231, 14, 2011],
+                    ['Tofu', 235, 5, 2011],
+                    ['Dumpling', 341, 25, 2011],
+                    ['Biscuit', 122, 29, 2011],
+                    ['Cake', 143, 30, 2012],
+                    ['Cereal', 201, 19, 2012],
+                    ['Tofu', 255, 7, 2012],
+                    ['Dumpling', 241, 27, 2012],
+                    ['Biscuit', 102, 34, 2012],
+                    ['Cake', 153, 28, 2013],
+                    ['Cereal', 181, 21, 2013],
+                    ['Tofu', 395, 4, 2013],
+                    ['Dumpling', 281, 31, 2013],
+                    ['Biscuit', 92, 39, 2013],
+                    ['Cake', 223, 29, 2014],
+                    ['Cereal', 211, 17, 2014],
+                    ['Tofu', 345, 3, 2014],
+                    ['Dumpling', 211, 35, 2014],
+                    ['Biscuit', 72, 24, 2014],
+                ],
+            },
+            {
+                transform: {
+                    type: 'filter',
+                    config: { dimension: 'Year', value: 2011 }
+                }
+            },
+            {
+                transform: {
+                    type: 'filter',
+                    config: { dimension: 'Year', value: 2012 }
+                }
+            },
+            {
+                transform: {
+                    type: 'filter',
+                    config: { dimension: 'Year', value: 2013 }
+                }
+            },
+            {
+                transform: {
+                    type: 'filter',
+                    config: { dimension: 'Year', value: 2014 }
+                }
+            },
+        ],
+        series: [
+            { type: 'pie', radius: 30, center: ['15%', '50%'], datasetIndex: 1 },
+            { type: 'pie', radius: 30, center: ['38%', '50%'], datasetIndex: 2 },
+            { type: 'pie', radius: 30, center: ['63%', '50%'], datasetIndex: 3 },
+            { type: 'pie', radius: 30, center: ['88%', '50%'], datasetIndex: 4 },
+        ],
+    };
+
+
     barCahrt.setOption(option1);
     pieChart.setOption(option2);
     lineChart.setOption(option3);
@@ -255,6 +319,7 @@
     datasetchart01.setOption(datasetoption1);
     datasetchart02.setOption(datasetoption2);
     datasetchart03.setOption(datasetoption3);
+    datasettransform01.setOption(datasettransformoptipon1);
 </script>
 
 </html>
