--- a/ts-echarts/vueapp/vueecharts/index.html
+++ b/ts-echarts/vueapp/vueecharts/index.html
@@ -1,10 +1,18 @@
+<!--
+ * @Author: OCEAN.GZY
+ * @Date: 2022-10-28 15:31:23
+ * @LastEditors: OCEAN.GZY
+ * @LastEditTime: 2022-10-31 11:00:10
+ * @FilePath: /echarts/ts-echarts/vueapp/vueecharts/index.html
+ * @Description: 注释信息
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>书籍数据看板demo</title>
   </head>
   <body>
     <div id="app"></div>
